# Copyright 2017 The Fuchsia Authors. All rights reserved.  Use of
# this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("intel-pt-decode") {
  sources = [
    "decoder.cc",
    "decoder.h",
    "elf.cc",
    "sideband.cc",
    "util.cc",
    "util.h",
  ]

  deps = [
    "//lib/ftl",
    "//third_party/processor-trace/libipt"
  ]

  include_dirs = [
    "..",
    "//third_party/processor-trace/libipt/include",
  ]
}
